bugs
kinda fixed the modal position when opening the overlay but still it's not centered.
added spacing system for reference and consistency and updated some values to respect the system

--- a/app/scss/components/main.scss
+++ b/app/scss/components/main.scss
@@ -1,24 +1,27 @@
 @use "../util" as *;
 
+/*
+SPACING SYSTEM (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+FONT SIZE SYSTEM (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+*/
+
 .main {
-  padding: 0 rem(10);
-  margin-bottom: rem(60);
+  padding: 0 rem(12) rem(96);
 
   // Centrar main
   align-self: center;
 
   &__container {
-    // display: grid;
-    // grid-template-columns: repeat(2, 1fr);
-    // justify-items: center;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    gap: rem(10);
+    gap: rem(12);
 
     &-movie {
       height: auto;
-      margin-bottom: rem(12);
 
       position: relative;
       &--poster {
