--- a/app/scss/components/navbar.scss
+++ b/app/scss/components/navbar.scss
@@ -1,12 +1,20 @@
 @use "../util" as *;
 
+/*
+SPACING SYSTEM (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+FONT SIZE SYSTEM (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+*/
+
 .nav {
   position: fixed;
-  bottom: 0;
+  bottom: 0; // Probar en distintos dispositivos por si queda 1px abajo
   left: 0;
   width: 100%;
   height: 9.5%;
-  background-color: var(--container-bg);
+  background-color: var(--white);
 
   display: flex;
 
@@ -26,20 +34,7 @@
 
       text-transform: capitalize;
       text-align: center;
-      color: #656e6b;
-      transition: var(--transition);
-
-      // WHEN PRESSED ACTIVAR ESTO
-      &:first-of-type span {
-        background-color: hsl(164, 37%, 86%);
-        font-variation-settings: "FILL" 1;
-        color: #000;
-      }
-      // WHEN PRESSED ACTIVAR ESTO
-      &:first-of-type a {
-        font-weight: 700;
-        color: #000;
-      }
+      color: var(--gray-nav);
 
       &--icon {
         padding: rem(4) rem(20);
@@ -48,8 +43,20 @@
 
       &--anchor {
         font-size: rem(12);
-        color: #656e6b;
+        color: var(--gray-nav);
         letter-spacing: 0.4px;
+      }
+
+      // WHEN ACTIVE
+      &:first-of-type span {
+        background-color: var(--key-green-light);
+        font-variation-settings: "FILL" 1;
+        color: var(--black-blue);
+      }
+      // WHEN ACTIVE
+      &:first-of-type a {
+        font-weight: 500;
+        color: var(--black-blue);
       }
     }
   }
