--- a/app/scss/components/overlay.scss
+++ b/app/scss/components/overlay.scss
@@ -6,7 +6,7 @@
 
 // Hacerlo de 0 con grid
 .modal {
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
