--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -70,6 +70,24 @@
   --blue-1: #1c3f92;
   --blue-2: #1f419a;
   --blue-3: #09328a;
+  --white: #eae8e9;
+
+  // Palette: https://coolors.co/eef2fc-dde5f8-92a8dd-1f419a-223d81-060e23-030711
+  --white: #fff;
+  --white-blue: #eef2fc;
+  --very-light-blue: #dce4f9;
+  --light-blue: #92a8dd;
+  --primary-blue: #1f419a;
+  --dark-blur: #223d81;
+  --very-dark-blue: #060e23;
+  --black-blue: #030711;
+  --black: #000;
+
+  --gray-nav: #656e6b;
+  --key-green: #59c0ab;
+  --key-green-light: #c4e9e1;
+  --key-orange: #ff663c;
+  --key-yellow: #f3c567;
 }
 
 :root {
