--- a/styles.css
+++ b/styles.css
@@ -73,12 +73,34 @@
   --blue-1: #1c3f92;
   --blue-2: #1f419a;
   --blue-3: #09328a;
+  --white: #eae8e9;
+  --white: #fff;
+  --white-blue: #eef2fc;
+  --very-light-blue: #dce4f9;
+  --light-blue: #92a8dd;
+  --primary-blue: #1f419a;
+  --dark-blur: #223d81;
+  --very-dark-blue: #060e23;
+  --black-blue: #030711;
+  --black: #000;
+  --gray-nav: #656e6b;
+  --key-green: #59c0ab;
+  --key-green-light: #c4e9e1;
+  --key-orange: #ff663c;
+  --key-yellow: #f3c567;
 }
 
 :root {
   --transition: all 0.3s;
 }
 
+/*
+SPACING SYSTEM (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+FONT SIZE SYSTEM (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+*/
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -155,20 +177,33 @@ a:active {
   height: 12.5rem;
 }
 
+/*
+SPACING SYSTEM (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+FONT SIZE SYSTEM (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+*/
 .header {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1.25rem 0;
+  padding: 1.5rem 0;
 }
 
 .header__logo {
-  width: 3.125rem;
+  width: 4rem;
 }
 
+/*
+SPACING SYSTEM (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+FONT SIZE SYSTEM (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+*/
 .main {
-  padding: 0 0.625rem;
-  margin-bottom: 3.75rem;
+  padding: 0 0.75rem 6rem;
   align-self: center;
 }
 
@@ -176,12 +211,11 @@ a:active {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  gap: 0.625rem;
+  gap: 0.75rem;
 }
 
 .main__container-movie {
   height: auto;
-  margin-bottom: 0.75rem;
   position: relative;
 }
 
@@ -209,13 +243,20 @@ a:active {
     width: 18.75rem;
   }
 }
+/*
+SPACING SYSTEM (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+FONT SIZE SYSTEM (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+*/
 .nav {
   position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
   height: 9.5%;
-  background-color: var(--container-bg);
+  background-color: var(--white);
   display: flex;
 }
 
@@ -234,19 +275,7 @@ a:active {
   justify-content: space-evenly;
   text-transform: capitalize;
   text-align: center;
-  color: #656e6b;
-  transition: var(--transition);
-}
-
-.nav__list-item:first-of-type span {
-  background-color: hsl(164, 37%, 86%);
-  font-variation-settings: "FILL" 1;
-  color: #000;
-}
-
-.nav__list-item:first-of-type a {
-  font-weight: 700;
-  color: #000;
+  color: var(--gray-nav);
 }
 
 .nav__list-item--icon {
@@ -256,8 +285,19 @@ a:active {
 
 .nav__list-item--anchor {
   font-size: 0.75rem;
-  color: #656e6b;
+  color: var(--gray-nav);
   letter-spacing: 0.4px;
+}
+
+.nav__list-item:first-of-type span {
+  background-color: var(--key-green-light);
+  font-variation-settings: "FILL" 1;
+  color: var(--black-blue);
+}
+
+.nav__list-item:first-of-type a {
+  font-weight: 500;
+  color: var(--black-blue);
 }
 
 .material-symbols-outlined {
@@ -269,7 +309,7 @@ a:active {
 }
 
 .modal {
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
